--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>한솔 홈데크</title>
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
     <a href="#a" class="skip">본문바로가기</a>
+    <header>
+        <h1><a href="#a">한솔홈데코</a></h1>
+        <h2>대메뉴</h2>
+        <nav class="lnb">
+            <ul>
+                <li><a href="#a">제품정보</a></li>
+                <li><a href="#a">시공사례</a></li>
+                <li><a href="#a">고객센터</a></li>
+                <li><a href="#a">기업소개</a></li>
+                <li><a href="#a">사업분야</a></li>
+            </ul>
+        </nav>
+        <h2>관련서비스</h2>
+        <nav class="spot">
+            <ul>
+                <li><a href="#a">제품찾기</a></li>
+                <li><a href="#a">SITEMAP</a></li>
+                <li><a href="#a">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
