--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <a href="#a" class="skip">본문바로가기</a>
     <header>
         <h1><a href="#a">한솔홈데코</a></h1>
-        <h2>대메뉴</h2>
+        <h2 class="hide">대메뉴</h2>
         <nav class="lnb">
             <ul>
-                <li><a href="#a">제품정보</a></li>
-                <li><a href="#a">시공사례</a></li>
-                <li><a href="#a">고객센터</a></li>
-                <li><a href="#a">기업소개</a></li>
-                <li><a href="#a">사업분야</a></li>
+                <li><a href="#a"><span>제품정보</span></a></li>
+                <li><a href="#a"><span>시공사례</span></a></li>
+                <li><a href="#a"><span>고객센터</span></a></li>
+                <li><a href="#a"><span>기업소개</span></a></li>
+                <li><a href="#a"><span>사업분야</span></a></li>
             </ul>
         </nav>
-        <h2>관련서비스</h2>
+        <h2 class="hide">관련서비스</h2>
         <nav class="spot">
             <ul>
                 <li><a href="#a">제품찾기</a></li>
