--- a/index.html
+++ b/index.html
@@ -28,5 +28,32 @@
             </ul>
         </nav>
     </header>
+    <section class="visual">
+        <h2 class="hide">광고영역</h2>
+        <a href="#a" class="prev">이전</a>
+        <a href="#a" class="next">다음</a>
+        <div class="control">
+            <div>
+                <div>
+                    <a href="#a" class="play on">시작</a>
+                    <a href="#a" class="pause">정지</a>
+                </div>
+                <ul>
+                    <li class="on"><a href="#a">한솔홈데코 비전</a></li>
+                    <li><a href="#a">XXX 신상품</a></li>
+                    <li><a href="#a">설명텍스트3</a></li>
+                    <li><a href="#a">설명텍스트4</a></li>
+                    <li><a href="#a">설명텍스트5</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="con">
+            <div class="slide">
+                가구 소재에서<br>
+                인테리어 자제까지
+                <p>한솔홈데코 편리하고 행복한 공간을 만들어 갑니다.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
