한솔홈데크 비주얼 영역

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         </div>
         <div class="con">
             <div class="slide">
-                가구 소재에서<br>
-                인테리어 자제까지
-                <p>한솔홈데코 편리하고 행복한 공간을 만들어 갑니다.</p>
+                <div class="txt">
+                    가구 소재에서<br>
+                    인테리어 자제까지
+                    <p>한솔홈데코 편리하고 행복한 공간을 만들어 갑니다.</p>
+                </div>
             </div>
         </div>
     </section>
