hansol 제품정보영역 완료

--- a/index.html
+++ b/index.html
@@ -57,5 +57,16 @@
             </div>
         </div>
     </section>
+    <section class="product">
+        <h2 class="hide">제품 정보</h2>
+        <ul>
+            <li><a href="#a">바닥재</a></li>
+            <li><a href="#a">벽면재</a></li>
+            <li><a href="#a">도어재</a></li>
+            <li><a href="#a">몰딩재</a></li>
+            <li><a href="#a">시트재</a></li>
+            <li><a href="#a">가구재</a></li>
+        </ul>
+    </section>
 </body>
 </html>
