hansol 한솔메거진부분 완료

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <section class="visual">
+    <section class="visual slide">
         <h2 class="hide">광고영역</h2>
         <a href="#a" class="prev">이전</a>
         <a href="#a" class="next">다음</a>
@@ -67,6 +67,165 @@
             <li><a href="#a">시트재</a></li>
             <li><a href="#a">가구재</a></li>
         </ul>
+    </section>
+    <section class="magazine slide">
+        <h2>한솔 매거진</h2>
+        <p>한솔홈데코의 다양한 제품을 만나보세요</p>
+        <h2 class="hide">광고영역</h2>
+        <a href="#a" class="prev">이전</a>
+        <a href="#a" class="next">다음</a>
+        <div class="control">
+            <div>
+                <div>
+                    <a href="#a" class="play on">시작</a>
+                    <a href="#a" class="pause">정지</a>
+                </div>
+                <ul>
+                    <li class="on"><a href="#a">한솔홈데코 비전</a></li>
+                    <li><a href="#a">XXX 신상품</a></li>
+                    <li><a href="#a">설명텍스트3</a></li>
+                    <li><a href="#a">설명텍스트4</a></li>
+                    <li><a href="#a">설명텍스트5</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="slide_box">
+            <div>
+                <div class="left">
+                    <a href="#a">
+                        <img src="img/thumbview_main.jpeg">
+                    </a>
+                </div>
+                <ul class="right">
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview.jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;여닫이</strong>
+                                퍼펙트 여닫이 도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (1).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;스윙도어</strong>
+                                퍼펙트 스윙도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (2).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;슬림슬라이딩</strong>
+                                퍼펙트 원슬라이딩
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (3).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;3연동</strong>
+                                퍼펙트 연동
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="left">
+                    <a href="#a">
+                        <img src="img/thumbview_main.jpeg">
+                    </a>
+                </div>
+                <ul class="right">
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview.jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;여닫이</strong>
+                                퍼펙트 여닫이 도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (1).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;스윙도어</strong>
+                                퍼펙트 스윙도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (2).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;슬림슬라이딩</strong>
+                                퍼펙트 원슬라이딩
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (3).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;3연동</strong>
+                                퍼펙트 연동
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="left">
+                    <a href="#a">
+                        <img src="img/thumbview_main.jpeg">
+                    </a>
+                </div>
+                <ul class="right">
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview.jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;여닫이</strong>
+                                퍼펙트 여닫이 도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (1).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;스윙도어</strong>
+                                퍼펙트 스윙도어
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (2).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;슬림슬라이딩</strong>
+                                퍼펙트 원슬라이딩
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#a">
+                            <div>
+                                <img src="img/thumbview (3).jpeg">
+                                <strong>도어재&gt;알루미늄시스템&gt;3연동</strong>
+                                퍼펙트 연동
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 </html>
