--- a/index.html
+++ b/index.html
@@ -227,5 +227,29 @@
             </div>
         </div>
     </section>
+    <section class="notice">
+        <div>
+            <div class="top">
+                <ul>
+                    <li><a href="#a">테마 갤러리</a></li>
+                    <li><a href="#a">블로그</a></li>
+                    <li><a href="#a">대리점 찾기</a></li>
+                </ul>
+                <div>
+                    <h2>제품 찾기</h2>
+                    <div>
+                        <select title="검색조건 선택">
+                            <option>제품 전체검색</option>
+                        </select>
+                    </div>
+                    <div>
+                        <div><input type="search" title="모델명 입력" placeholder="모델명을 입력하세요"></div>
+                    </div>
+                    <div><a href="#a">검색하기</a></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
