한솔 홈데코 배너 및 검색영역 html,css 완성

--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
         </div>
     </section>
     <section class="notice">
-        <div>
+        <div class="clear">
             <div class="top">
                 <ul>
-                    <li><a href="#a">테마 갤러리</a></li>
-                    <li><a href="#a">블로그</a></li>
-                    <li><a href="#a">대리점 찾기</a></li>
+                    <li><a href="#a">테마 갤러리<span>한솔의 행복한 삶의 공간</span></a></li>
+                    <li><a href="#a">블로그<span>소소한 한솔 인테리어 이야기</span></a></li>
+                    <li><a href="#a">대리점 찾기<span>가까운 한솔홈데코 매장확인</span></a></li>
                 </ul>
                 <div>
                     <h2>제품 찾기</h2>
