--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </section>
     <section class="notice">
         <div class="clear">
-            <div class="top">
+            <div class="top clear">
                 <ul>
                     <li><a href="#a">테마 갤러리<span>한솔의 행복한 삶의 공간</span></a></li>
                     <li><a href="#a">블로그<span>소소한 한솔 인테리어 이야기</span></a></li>
@@ -248,8 +248,27 @@
                     <div><a href="#a">검색하기</a></div>
                 </div>
             </div>
-
+            <article>
+                <div class="left">
+                    <h2>공지</h2>
+                    <ul>
+                        <li><a href="#a">한솔홈데코 홈페이지 리뉴얼 오픈 기념 공지사항<p>2018.03.26</p><div>이벤트 응모 블로글 바로가기</div></a></li>
+                        <li><a href="#a">스토리 보드 PET(영상)<p>2018.03.15</p><div>가구의 품격을 높이는 한솔 스토리보드 PET 새집증후군 등의 사회적 문제를</div></a></li>
+                    </ul>
+                    <a href="#a">더보기</a>
+                </div>
+                <div class="right">
+                    <h2>뉴스</h2>
+                    <ul>
+                        <li><a href="#a">[봄 스며드는 우리집] 한솔홈데코, 친환경 온돌마루 벽지 도어 '집안이 산뜻'<p>2018.03.27</p></a></li>
+                        <li><a href="#a">습기에 강하고 열 효율성 높은 'SB마루'로 집안을 산뜻하게!<p>2018.03.16</p></a></li>
+                        <li><a href="#a">한솔홈데코가 제안하는 인테리어 트렌드 - 강마루 월, 중문 활용한 '소프트 빈티지'<p>2018.01.24ㄴ</p></a></li>
+                    </ul>
+                    <a href="#a">더보기</a>
+                </div>
+            </article>
         </div>
+        
     </section>
 </body>
 </html>
