배너 푸터 html 배너 css 완성

--- a/index.html
+++ b/index.html
@@ -270,5 +270,44 @@
         </div>
         
     </section>
+    <section class="banner">
+        <h2 class="hide">주요 서비스</h2>
+        <ul>
+            <li><a href="#a"><strong>가구컴포넌트</strong>소재부터 가구 도어까지</a></li>
+            <li><a href="#a"><strong>인테리어 자제</strong>행복한 공간을 위한 토털 인테리어</a></li>
+            <li><a href="#a"><strong>연관 사업</strong>자연과 인간의 조화를 이루는 한솔</a></li>
+            <li><a href="#a"><strong>고객 상담</strong>무엇이든 물어보세요</a></li>
+        </ul>
+    </section>
+    <footer>
+        <div class="top">
+            <div class="clear">
+                <ul>
+                    <li><a href="#a">고객상담</a></li>
+                    <li><a href="#a">개인정보처리방침</a></li>
+                    <li><a href="#a">기업지배구조</a></li>
+                    <li><a href="#a">윤리경영</a></li>
+                    <li><a href="#a">HOMEDECO SALES PORTAL</a></li>
+                    <li><a href="#a">E-Purchase</a></li>
+                </ul>
+                <div>
+                    <p>고객 상담<strong>080-777-2299</strong></p>
+                    <select>
+                        <option>FAMILY SITE</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="btm">
+            <p>한솔 홈데코</p>
+            <ul>
+                <li>서울동작구 보라매로5길 15(신태방동, 전문건설회관 27층)</li>
+                <li>Tel 080-777-2299</li>
+                <li>개인정보취급관리자 서범석</li>
+                <li>E-mail homedeco@hansol.com</li>
+            </ul>
+            <address>Copyright 2018 HANSOLHOMEDECO All rights reserved.</address>
+        </div>
+    </footer>
 </body>
 </html>
